<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonConfirmID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginRight="36dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textAlert"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/yes_text"/>

            <Button
                android:id="@+id/buttonDenyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="36dp"
                android:layout_alignBottom="@+id/buttonConfirmID"
                android:background="@color/colorAccent"
                android:text="@string/no_text"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>